# .bit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agents/: CLAUDE.bit
agents/.claude-plugin/: plugin.json
agents/hooks/: hooks.json
agents/hooks/scripts/: check-cli.sh  enforce-rules.sh  init-store.sh  inject-context.sh  load-context.sh  sync-on-write.sh  track-memory.sh  validate-bit.sh  validate-on-save.sh
agents/skills/bit-init/: SKILL.md
agents/skills/bit-rules/: SKILL.md
agents/skills/bit-status/: SKILL.md
agents/skills/bit-sync/: SKILL.md
agents/templates/: memory.bit  project.bit  schemas.bit  tasks.bit
crates/bit-cli/: Cargo.toml
crates/bit-cli/src/: discover.rs  main.rs
crates/bit-cli/src/commands/: annotate.rs  anomaly_cmd.rs  apply.rs  check.rs  collapse.rs  convert.rs  delete.rs  drift_cmd.rs  expand.rs  fmt.rs  infer.rs  info.rs  init.rs  insert.rs  link.rs  mod.rs  pages.rs  parse.rs  query.rs  render.rs  search_cmd.rs  status.rs  suggest.rs  update.rs  validate.rs  watch.rs
crates/bit-cli/src/harness/: claude_code.rs  generic.rs  mod.rs
crates/bit-core/: Cargo.toml
crates/bit-core/src/: bit_errors.rs  bit_types.rs  check.rs  context.rs  convert.rs  eval.rs  format.rs  gate.rs  grid.rs  index.rs  interpret.rs  ir.rs  lex.rs  lib.rs  mutate.rs  parse.rs  query.rs  render.rs  schema.bit  schema.rs  span.rs  trit.rs  tst.rs  types.rs  validate.rs  workflow.rs
crates/bit-core/tests/: conformance.rs  edge_cases.rs  integration.rs  proptests.rs
crates/bit-core/tests/fixtures/: canon.bit  experience.bit  mod.bit  system.bit
crates/bit-core/tests/grammar/: bit.peg
crates/bit-mcp/: Cargo.toml
crates/bit-mcp/src/: main.rs
crates/bit-nl-core/: Cargo.toml
crates/bit-nl-core/src/: classify.rs  confidence.rs  emit.rs  incremental.rs  lib.rs  profile.rs  segment.rs  span_index.rs
crates/bit-nl-core/tests/: integration.rs
crates/bit-nl-core/tests/snapshots/: integration__define_user_bit_output.snap  integration__flow_when_then_bit_output.snap  integration__policy_never_bit_output.snap  integration__task_login_bit_output.snap  integration__unknown_auth_bit_output.snap
crates/bit-nl-lsp/: Cargo.toml
crates/bit-nl-lsp/src/: actions.rs  completion.rs  diagnostics.rs  hover.rs  inlay.rs  main.rs  state.rs  tokens.rs
crates/bit-python/: Cargo.toml  pyproject.toml
crates/bit-python/src/: lib.rs
crates/bit-store/: Cargo.toml
crates/bit-store/benches/: store_bench.rs
crates/bit-store/src/: anomaly.rs  auto_index.rs  autocomplete.rs  btree.rs  classify.rs  collapse.rs  compression.rs  diff.rs  drift.rs  embeddings.rs  evolution.rs  expand.rs  infer.rs  lib.rs  linking.rs  mutate_engine.rs  nl_query.rs  page.rs  pager.rs  patterns.rs  pipeline.rs  query_engine.rs  scoring.rs  search.rs  store.rs  table.rs  vector_search.rs
crates/bit-store/tests/: stress.rs
crates/bit-wasm/: Cargo.toml
crates/bit-wasm/examples/: node-demo.mjs
crates/bit-wasm/npm/: package.json
crates/bit-wasm/src/: lib.rs
crates/bit-wasm/types/: index.d.ts
learn/: 01-getting-started.md  02-entities-and-schemas.md  03-tasks-and-flows.md  04-gates-and-validation.md  05-store-and-expand.md  06-converting-formats.md  07-harness-integration.md  08-advanced-patterns.md  09-bitstore-engine.md  10-store-intelligence.md
zaius-lsp/: Cargo.toml
zaius-lsp/src/: main.rs
