[package]
name = "bit-lang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI toolkit for the .bit language"

[[bin]]
name = "bit"
path = "src/main.rs"

[dependencies]
bit-lang-core = { version = "0.1.0", path = "../bit-core" }
bit-lang-store = { version = "0.1.0", path = "../bit-store" }
bit-nl-core = { path = "../bit-nl-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
