[package]
name = "bit-lang-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for .bit language store access"

[[bin]]
name = "bit-mcp"
path = "src/main.rs"

[dependencies]
bit-lang-core = { version = "0.1.0", path = "../bit-core" }
bit-lang-store = { version = "0.1.0", path = "../bit-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
