[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bit-lang"
version = "0.1.0"
description = "The .bit language toolkit — parse, validate, render, and convert .bit documents"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
