[package]
name = "bit-lang-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressable store for .bit documents"

[lib]
name = "bit_store"

[features]
default = []
embeddings = ["dep:tract-onnx", "dep:tokenizers"]
ml = ["dep:smartcore", "dep:extended-isolation-forest"]
full = ["embeddings", "ml"]

[dependencies]
bit-lang-core = { version = "0.1.0", path = "../bit-core" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }

# Optional: embeddings
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false }

# Optional: ML
smartcore = { version = "0.3", optional = true, default-features = false, features = ["ndarray-bindings"] }
extended-isolation-forest = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "store_bench"
harness = false
